@@ -13,6 +13,7 @@ Each update goes to the top of the file
                        -> Work more on sharing class.
                        -> Improve debug output on sharing class.
                        -> Write up schema for sharing.
+                       -> Function comment posting, work on retrieval another day.
 2014-02-02 -> jonnyboy -> fixed bug in convert_mysql_tables.php not converting releasenfo to dynamic innodb when using cinnodb
 2014-02-01 -> jonnyboy -> fixed bug in nntpproxy.php, added option to run python binaries_threaded.py alt.binaries.teevee
                           added dereferrer to movies list
